--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,6 +4,6 @@
   "short_name": "Welcome to Qwik",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#fff",
+  "background_color": "#000000",
   "description": "A Qwik project app."
 }
